<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <!--<androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->

    <LinearLayout
        android:id="@+id/layoutRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="36sp"
            android:layout_marginBottom="72dp" />

        <EditText
            android:id="@+id/registerFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_fullname"
            android:ems="10"
            android:autofillHints="@string/register_fullname"
            android:inputType="textPersonName"
            android:layout_marginVertical="8dp" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:ems="10"
            android:autofillHints="@string/register_email"
            android:inputType="textEmailAddress"
            android:layout_marginVertical="8dp" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_password"
            android:autofillHints="@string/register_password"
            android:inputType="textPassword"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/registerPasswordCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_password_check"
            android:autofillHints="@string/register_password_check"
            android:inputType="textPassword"
            android:layout_marginVertical="8dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="24dp"
            android:text="@string/register_action"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>